# ittybittyvideos

./: .env.example  .gitignore  AGENTS.md  ASSESSMENT-BY-CURSOR.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README-zh.md  README.md  SPEC.md  TODO.md  justfile  pyproject.toml  roughcut-backend.spec  run_server.py  start-localgen.bat  start-web.bat  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: ALPHA-RELEASE-CHECKLIST.md  CONFIGURATION.md  DEVELOPMENT.md  E2E.md  EXEMPLARS-RESEARCH.md  EXTERNAL-REFERENCES.md  GITIGNORE-ASSESSMENT.md  LOCAL-VIDEO-GENERATORS.md  PROMPT-DIRECTOR.md  PROVIDERS-AND-MODELS.md  TOOLS.md  TROUBLESHOOTING.md  index.html
docs/examples/: README.md
native/: Cargo.toml  build-sidecar.ps1  build.ps1  tauri.conf.json
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: ensure_ffmpeg_path.ps1  publish-release-local.ps1  render_gsd_demo.ps1  run-e2e.ps1  smoke_render.py  start_cogvideo.ps1  start_localgen.ps1  validate_fable.py
src/videogen_mcp/: __init__.py  mcp_registry.py  server.py  webapp_static.py
src/videogen_mcp/cogvideo_server/: __init__.py  __main__.py  app.py  pipeline.py
src/videogen_mcp/config/: __init__.py  settings.py
src/videogen_mcp/localgen_server/: __init__.py  __main__.py  app.py  pipeline.py
src/videogen_mcp/models/: __init__.py  credits.py  critique.py  intro.py  schema.py  storyboard.py  trope.py  visual_look.py
src/videogen_mcp/providers/: __init__.py  base.py  llm_deepseek.py  llm_lmstudio.py  llm_ollama.py  llm_openai.py  llm_qwen.py  llm_resolve.py  stock_cogvideo.py  stock_coverr.py  stock_google.py  stock_library.py  stock_localgen.py  stock_mixkit.py  stock_nasa.py  stock_pexels.py  stock_pixabay.py  talker_sadtalker.py  tts_cosyvoice.py  tts_edge.py
src/videogen_mcp/services/: activity_log.py  addons.py  align.py  audio.py  cache.py  compose.py  config_store.py  credits.py  critic.py  depot.py  google_video.py  intros.py  (+16 more)
templates/credits/: absurd-pixar.yaml
templates/intros/: alpine-mariachi-contrast.yaml  asmr-demolition-contrast.yaml  bluey-horror-contrast.yaml  deadpan-corporate.yaml  documentary-gravitas.yaml  elevator-jazz-fall.yaml  epic-trailer.yaml  ikea-inspirational-piano.yaml  nature-doc-toddler-chaos.yaml
templates/tropes/: README.md  absurd-credits-roll.yaml  before-after-reveal.yaml  contrast-intro-sequence.yaml  countdown-three-things.yaml  dog-tease-fridge.yaml  duo-unfair-portion.yaml  myth-vs-truth.yaml  pet-food-duo-review.yaml  satisfying-process-loop.yaml  story-hook-reveal.yaml
tests/: conftest.py  test_addons.py  test_align.py  test_audio.py  test_cache.py  test_compose.py  test_config_store.py  test_credits.py  test_critic.py  test_google_video.py  test_intros.py  test_job_store.py  test_library_stock.py  test_llm_resolve.py  test_localgen_server.py  test_logs_api.py  test_mcp.py  test_prompt_director.py  test_providers.py  test_publish.py  test_schema.py  test_server.py  test_stock_free_providers.py  test_stock_status.py  test_storyboard.py  test_videographer.py  test_visual_look.py  test_webapp_static.py
webapp/: index.html  package-lock.json  package.json  playwright.config.ts  start.bat  start.ps1  vite.config.ts
webapp/e2e/: smoke.spec.ts
webapp/src/: App.css  App.tsx  main.tsx
website/: README.md  style.css
(+30 files in other folders)
