[project]
name = "videogen-mcp"
version = "0.2.0"
description = "AI-powered short video generation MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sandra Schipal" }]
dependencies = [
    "fastmcp>=3.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "edge-tts>=7.0.0",
    "loguru>=0.7.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
align = [
    "faster-whisper>=1.1.0",
]
beats = [
    "librosa>=0.10",
]
cogvideo = [
    "torch>=2.4.0",
    "diffusers>=0.30.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "imageio[ffmpeg]>=2.34.0",
    "sentencepiece>=0.2.0",
    "ftfy>=6.2.0",
]
localgen = [
    "torch>=2.4.0",
    "diffusers>=0.32.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "imageio[ffmpeg]>=2.34.0",
    "sentencepiece>=0.2.0",
    "ftfy>=6.2.0",
]
google = [
    "google-genai>=1.20.0",
    "google-cloud-aiplatform>=1.127.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videogen_mcp"]

[project.scripts]
localgen-server = "videogen_mcp.localgen_server.__main__:main"
cogvideo-server = "videogen_mcp.localgen_server.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
