[package]
name = "roughcut-native"
version = "0.1.0"
description = "roughcut desktop app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.36"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
